--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>BaiduMap实例</title>
     <!--<link rel="icon" href="https://favicon.ico">-->
+    <link rel="stylesheet" href="BaiduMap.css">
     <style type="text/css">  
         html{height:100%}  
         body{height:100%;margin:0px;padding:0px}  
